se agrego el campo supplierForeignId en varias entidades