@@ -3,7 +3,6 @@ package ar.edu.um.programacion2.jh.service.dto;
 import static org.junit.jupiter.api.Assertions.*;
 
 import ar.edu.um.programacion2.jh.domain.Customization;
-import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
@@ -11,23 +10,25 @@ public class CustomizationDTOTest {
 
     @Test
     void toCustomizationConvertsCorrectly() {
-        OptionDTO option1 = new OptionDTO(1L, "Option1", "name1", "Description1", 100.0);
-        OptionDTO option2 = new OptionDTO(2L, "Option2", "name2", "Description2", 200.0);
-        CustomizationDTO dto = new CustomizationDTO(1L, "Customization", "Description", List.of(option1, option2));
+        OptionDTO option1 = new OptionDTO(1L, 10L, "CODE01", "Option1", "Description1", 100.0);
+        OptionDTO option2 = new OptionDTO(2L, 10L, "CODE02", "Option2", "Description2", 200.0);
+        CustomizationDTO dto = new CustomizationDTO(1L, 10L, "Customization1", "Description1", List.of(option1, option2));
         Customization customization = CustomizationDTO.toCustomization(dto);
 
         assertEquals(1L, customization.getId());
-        assertEquals("Customization", customization.getName());
-        assertEquals("Description", customization.getDescription());
+        assertEquals(10L, customization.getSupplierForeignId());
+        assertEquals("Customization1", customization.getName());
+        assertEquals("Description1", customization.getDescription());
         assertEquals(2, customization.getOptions().size());
     }
 
     @Test
     void toCustomizationHandlesNullValues() {
-        CustomizationDTO dto = new CustomizationDTO(null, null, null, null);
+        CustomizationDTO dto = new CustomizationDTO(null, null, null, null, null);
         Customization customization = CustomizationDTO.toCustomization(dto);
 
         assertNull(customization.getId());
+        assertNull(customization.getSupplierForeignId());
         assertNull(customization.getName());
         assertNull(customization.getDescription());
         assertTrue(customization.getOptions().isEmpty());
@@ -35,12 +36,13 @@ public class CustomizationDTOTest {
 
     @Test
     void toCustomizationHandlesEmptyOptions() {
-        CustomizationDTO dto = new CustomizationDTO(1L, "Customization", "Description", Collections.emptyList());
+        CustomizationDTO dto = new CustomizationDTO(1L, 10L, "Customization1", "Description1", List.of());
         Customization customization = CustomizationDTO.toCustomization(dto);
 
         assertEquals(1L, customization.getId());
-        assertEquals("Customization", customization.getName());
-        assertEquals("Description", customization.getDescription());
+        assertEquals(10L, customization.getSupplierForeignId());
+        assertEquals("Customization1", customization.getName());
+        assertEquals("Description1", customization.getDescription());
         assertTrue(customization.getOptions().isEmpty());
     }
 }
